syntax = "proto3";

package pb;

import "tag.proto";

option go_package = "/pb";

message Query {
  uint32       bucketId = 1;
  repeated Tag tags     = 2;
}
